--- a/ui/ver-tabla.ui
+++ b/ui/ver-tabla.ui
@@ -166,41 +166,71 @@ QPushButton:pressed {
         <string notr="true">QListWidget{
 background-color:white;
 color: rgb(130, 110, 74);
-
+border:none;
+color:#957F5F;
+font: 14pt &quot;Arial&quot;;
+padding: 10px
 }</string>
+       </property>
+       <property name="currentRow">
+        <number>-1</number>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QTableWidget" name="tableWidget">
        <property name="styleSheet">
-        <string notr="true">QTableWidget {
-background-color: white;
-
-}
-QTableWidget::item::selected, QTableWidget QLineEdit { 
-        background-color: #d3c393; 
-        color: black; 
-    }
-QTableView::item:selected {
-    background-color: rgb(209, 230, 255);
-}
-
-QTableWidget::item {background-color:white; color:black}
-
-QTableView::item:focus{
-    background-color: rgb(209, 230, 255);
-color: black;
-}
-
-QHeaderView::section{background-color: #d3c393; color:rgb(131, 112, 82);
-                                }</string>
+        <string notr="true">QTableWidget {	
+            background-color: #fff;
+            padding: 10px;
+            gridline-color: rgb(44, 49, 60);
+            border-bottom: 1px solid rgb(204, 207, 211);
+            color:#000;
+			border:none;
+        }
+        QTableWidget::item{
+            border-color: rgb(44, 49, 60);
+            padding-left: 5px;
+            padding-right: 5px;
+            gridline-color: rgb(44, 49, 60);
+        }
+        QTableWidget::item:selected{
+            background-color: #e5faf8;
+            color:#000;
+        }
+        QScrollBar:horizontal {
+            border: none;
+            background: rgb(52, 59, 72);
+            height: 14px;
+            margin: 0px 21px 0 21px;
+            border-radius: 0px;
+        }
+         QScrollBar:vertical {
+            border: none;
+            background: rgb(52, 59, 72);
+            width: 14px;
+            margin: 21px 0 21px 0;
+            border-radius: 0px;
+         }
+        QHeaderView{
+           background-color:#d3c393;
+            border: 1px solid rgb(204, 207, 211);
+            border-style: none;
+            border-bottom: 1px solid rgb(204, 207, 211);
+            border-right: 1px solid rgb(204, 207, 211);
+            color:rgb(130, 110, 74);
+            font-size:15px;
+            border-radius: 0px;
+        }</string>
+       </property>
+       <property name="autoScrollMargin">
+        <number>30</number>
        </property>
        <property name="showGrid">
         <bool>true</bool>
        </property>
        <property name="gridStyle">
-        <enum>Qt::SolidLine</enum>
+        <enum>Qt::DotLine</enum>
        </property>
        <property name="sortingEnabled">
         <bool>false</bool>
@@ -209,8 +239,11 @@ QHeaderView::section{background-color: #d3c393; color:rgb(131, 112, 82);
         <bool>true</bool>
        </property>
        <property name="cornerButtonEnabled">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
       </widget>
      </item>
     </layout>
