--- a/ui/ver-tabla.ui
+++ b/ui/ver-tabla.ui
@@ -72,6 +72,13 @@ QPushButton:pressed {
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="botonModificar">
+       <property name="text">
+        <string>Modificar</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QLineEdit" name="line_edit_busqueda_presupuesto">
        <property name="styleSheet">
         <string notr="true">QLineEdit {
